# appdenykdriver

./: CMakeLists.txt  PROJECT_STRUCTURE.md  README.md
.github/workflows/: build.yml  lint.yml  test.yml
agent/: CMakeLists.txt
agent/src/: main.cpp
agent/src/backend/: backend_factory.cpp  backend_factory.h  bpf_backend.cpp  bpf_backend.h  ikernel_backend.h  lsm_backend.cpp  lsm_backend.h
agent/src/config/: config_loader.cpp  config_loader.h
agent/src/crypto/: sha256.cpp  sha256.h
agent/src/events/: event_dispatcher.cpp  event_dispatcher.h
agent/src/logging/: logger.cpp  logger.h
agent/src/policy/: policy_manager.cpp  policy_manager.h
bpf/: CMakeLists.txt  Makefile  exec_events.h  maps.h  mini_exec_bpf.c
bpf/loader/: bpf_loader.cpp  bpf_loader.h
cmake/: CompilerWarnings.cmake  FindLibBPF.cmake  PlatformChecks.cmake
docs/: architecture.md  backend_design.md  bpf_design.md  lsm_design.md  netlink_protocol.md  roadmap.md  threat_model.md
kernel/: Kconfig  Makefile  hash_table.c  hash_table.h  mini_exec_lsm.c  mini_exec_lsm.h  netlink_comm.c  netlink_comm.h
policy/: README.md  example_lsm_policy.json  policy.schema.json
scripts/: clean.sh  load_bpf.sh  load_lsm.sh  test_exec.sh  unload_bpf.sh  unload_lsm.sh
tests/: CMakeLists.txt
tests/integration/: test_bpf_exec.cpp  test_lsm_exec.cpp
tests/unit/: test_policy.cpp  test_sha256.cpp
